--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.board {
+    display: flex;
+    align-content: flex-start;
+    flex-direction: column;
+    background-color: #75baf3;
+    height: 1000px;
+    width: 100%;
+}
+
+.board-row {
+    display: flex;
+    justify-content: space-evenly;
+    width: 1000px;
+}
+
+.spacer {
+    flex-grow: 2;
+}
+
+.territory:before {
+    content: " ";
+    width: 0; height: 0;
+    border-bottom: 30px solid;
+    border-left: 52px solid transparent;
+    border-right: 52px solid transparent;
+    position: absolute;
+    top: -30px;
+}
+
+.territory { 
+    width: 200px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: -20px;
+    width: 104px;
+    height: 60px;   
+    position: relative;
+    border: 1px solid #75baf3;
+}
+
+.territory:after {
+    content: "";
+    width: 0;
+    position: absolute;
+    bottom: -30px;
+    border-top: 30px solid;
+    border-left: 52px solid transparent;
+    border-right: 52px solid transparent;
+}
+
+.territory:hover{
+    font-weight: 800;
+    box-shadow: 4px solid lightslategrey;
+}
+
+.number-token {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: #ffe9cc;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+
+.territory-type-ore, .territory-type-ore:before, .territory-type-ore:after{
+    background-color: rgb(59, 59, 59);
+    border-bottom-color: rgb(59, 59, 59);
+    border-top-color: rgb(59, 59, 59);
+}
+
+.territory-type-forest, .territory-type-forest:before, .territory-type-forest:after {
+    background-color: rgb(3, 77, 0);
+    border-bottom-color: rgb(3, 77, 0);
+    border-top-color: rgb(3, 77, 0);
+}
+
+.territory-type-sheep, .territory-type-sheep:before, .territory-type-sheep:after {
+    background-color: rgb(157, 214, 145);
+    border-bottom-color: rgb(157, 214, 145);
+    border-top-color: rgb(157, 214, 145);
+}
+
+.territory-type-brick, .territory-type-brick:before, .territory-type-brick:after {
+    background-color: rgb(77, 0, 0);
+    border-bottom-color: rgb(77, 0, 0);
+    border-top-color: rgb(77, 0, 0);
+}
+
+.territory-type-wheat, .territory-type-wheat:before, .territory-type-wheat:after {
+    background-color: rgb(252, 249, 102);
+    border-bottom-color: rgb(252, 249, 102);
+    border-top-color: rgb(252, 249, 102);
+}
+
+.territory-type-desert, .territory-type-desert:before, .territory-type-desert:after{
+    background-color: rgb(223, 200, 159);
+    border-bottom-color: rgb(223, 200, 159);
+    border-top-color: rgb(223, 200, 159);
+}
+
+.territory-type-desert .number-token{
+    visibility: hidden;
+}
+
+/* overrides definitions above */
+.territory:before, .territory:after{
+    background-color: transparent;
 }
