--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .board {
@@ -64,9 +67,19 @@
     height: 50px;
     border-radius: 50px;
     background-color: #ffe9cc;
+    text-align: center;
     display: flex;
+    flex-direction: column;
     align-content: center;
     justify-content: center;
+}
+
+.number {
+    text-align: center;
+}
+
+.probability-ticks {
+    font-size: .7em;
 }
 
 
