--- a/src/index.css
+++ b/src/index.css
@@ -5,23 +5,28 @@
     box-sizing: border-box;
 }
 
+.container {
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: flex-start;
+    background-color: #75baf3;
+}
+
 .board {
     display: flex;
-    align-content: flex-start;
-    flex-direction: column;
-    background-color: #75baf3;
-    height: 1000px;
-    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 750px;
 }
 
-.board-row {
+/* .board-row {
     display: flex;
     justify-content: space-evenly;
-    width: 1000px;
-}
+} */
 
 .spacer {
-    flex-grow: 2;
+    width: 120px;
 }
 
 .territory:before {
@@ -35,7 +40,6 @@
 }
 
 .territory { 
-    width: 200px;
     display: flex;
     align-content: center;
     justify-content: center;
